--- a/nicnbk-ui-angular2/src/app/lookup/view/stress.test.lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/stress.test.lookup.values.component.html
@@ -23,25 +23,17 @@
 
         <div class="row">
             <div class="col-md-12">
-                <div class="col-md-2 pull-right">
-                    <a class="btn btn-primary" id="openCurrencyModalButton" data-toggle="modal" data-target="#addNewModal" (click)="edit()" style="cursor: pointer">
-                        <!--<span class="glyphicon glyphicon-edit"></span>-->Add
-                    </a>
-
+                <div class="col-md-1 col-md-offset-11">
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <a class="btn-sm btn-primary" id="openCurrencyModalButton" data-toggle="modal" data-target="#addNewModal" (click)="edit()"
+                           style="cursor: pointer; margin-left: 26px">
+                            <!--<span class="glyphicon glyphicon-edit"></span>-->Add
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-        <br/>
-        <!--        <div class="row">-->
-        <!--            <div class="col-md-12">-->
-        <!--                <div class="col-md-2 pull-right">-->
-        <!--                    <a class="btn btn-primary" data-toggle="modal" data-target="#benchmarkUploadModal" style="cursor: pointer">-->
-        <!--                        &lt;!&ndash;<span class="glyphicon glyphicon-edit"></span>&ndash;&gt;Add multiple-->
-        <!--                    </a>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <br/>
+        <br>
 
         <div class="jumbotron">
             <div class="row">
