--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-risk-hf.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-risk-hf.component.html
@@ -172,26 +172,54 @@
     <div class="row" [hidden]="selectedDateMonitoringInfo == null">
         <div class="col-md-12">
             <h4>TOP PORTFOLIO FUND ALLOCATIONS</h4>
-            <div *ngIf="canEdit()">
-                <form #yourForm="ngForm" (ngSubmit)="onSubmitTopPortfolio()">
-                    <label class="btn btn-sm btn-primary">
-                        <input type="file" #fileupload id="fileuploadTopPortfolio" (change)="fileChangeTopPortfolio(fileupload.files)" style="display: none"/>Upload
-                    </label>
-                    <button type="submit" class="btn btn-sm btn-success" *ngIf="this.myFilesTopPortfolio.length > 0">Submit</button>
-                </form>
-                <div *ngFor="let file of this.myFilesTopPortfolio" class="label label-info">
-                    <span>{{file.name}}</span>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-6">
+                        <div *ngIf="canEdit()">
+                            <form #yourForm="ngForm" style="margin-left: 14px" (ngSubmit)="onSubmitTopPortfolio()">
+                                <label class="btn-sm btn-primary">
+                                    <input type="file" #fileupload id="fileuploadTopPortfolio" (change)="fileChangeTopPortfolio(fileupload.files)"
+                                           style="display: none"/>Upload
+                                </label>
+                                <button type="submit" class="btn-sm btn-success" *ngIf="this.myFilesTopPortfolio.length > 0">Submit</button>
+                            </form>
+                            <div *ngFor="let file of this.myFilesTopPortfolio" class="label label-info">
+                                <span style="margin-bottom: 3px">{{file.name}}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="col-md-3">
+                            <button type="submit" class="btn btn-sm btn-success" (click)="onExportTopPortfolio()">Export</button>
+                            <button type="submit" class="btn-sm btn-danger" style="margin-left: 5px" (click)="onDeleteTopPortfolio()">Delete</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <br>
-            <div class="btn-toolbar">
-                <form #yourForm="ngForm" (ngSubmit)="onDeleteTopPortfolio()">
-                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
-                </form>
-                <form #yourForm="ngForm" (ngSubmit)="onExportTopPortfolio()">
-                    <button type="submit" class="btn btn-sm btn-success" style="margin-right: 3px">Export</button>
-                </form>
-            </div>
+
+<!--            <div *ngIf="canEdit()">-->
+<!--                <form #yourForm="ngForm" (ngSubmit)="onSubmitTopPortfolio()">-->
+<!--                    <label class="btn btn-sm btn-primary">-->
+<!--                        <input type="file" #fileupload id="fileuploadTopPortfolio" (change)="fileChangeTopPortfolio(fileupload.files)" style="display: none"/>Upload-->
+<!--                    </label>-->
+<!--                    <button type="submit" class="btn btn-sm btn-success" *ngIf="this.myFilesTopPortfolio.length > 0">Submit</button>-->
+<!--                </form>-->
+<!--                <div *ngFor="let file of this.myFilesTopPortfolio" class="label label-info">-->
+<!--                    <span>{{file.name}}</span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <br>-->
+<!--            <div class="btn-toolbar">-->
+<!--                <form #yourForm="ngForm" (ngSubmit)="onDeleteTopPortfolio()">-->
+<!--                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>-->
+<!--                </form>-->
+<!--                <form #yourForm="ngForm" (ngSubmit)="onExportTopPortfolio()">-->
+<!--                    <button type="submit" class="btn btn-sm btn-success" style="margin-right: 3px">Export</button>-->
+<!--                </form>-->
+<!--            </div>-->
+
             <br>
             <div class="alert alert-danger small" *ngIf="selectedDateMonitoringInfo?.topFundAllocationsError != null">
                 <span>{{selectedDateMonitoringInfo?.topFundAllocationsError}}</span>
